tests/invalid/action_buttons/array_wrong_forget_prior_type.fixture
/action buttons: type must be object.
Line 3
/action buttons: oneOf must match exactly one schema in oneOf.
Line 3
/action buttons/0/forget prior: type must be boolean.
Line 6